# pride_task2

./: .dockerignore  Dockerfile  pyproject.toml  task
src/processingservice/: config.py  main.py  models.py  processor.py
src/processingservice/kafka/: consumer.py  producer.py
